consertei meu codigo index

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,10 +8,12 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;800&family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;800&family=Roboto:wght@100&display=swap"
+        rel="stylesheet">
     <title>formulário nubank</title>
 </head>
+
 <body>
     <div>
         <img class="img-logo" src="new-logo-white.svg" alt="logo nubank">
@@ -20,11 +23,11 @@
         <form>
             <p>Faça seu login</p>
             <label for="cpf">CPF</label>
-            <input type="CPF" id="cpf" class="input-padrao" required>
+                <input type="CPF" id="cpf" class="input-padrao" required>
             <label for="senha">Senha</label>
-            <input type="password" id="senha" class="input-padrao" required>
+                <input type="password" id="senha" class="input-padrao" required>
             <button>Continuar</button>
-        
+
             <nav>
                 <a href="#">Esqueci minha senha</a>
                 <a href="#">Ainda não sou cliente</a>
